--- a/index.html
+++ b/index.html
@@ -1683,5 +1683,16 @@ div#st-1 {margin-top:10px}
   });
 </script>
 
+<SCRIPT language=JavaScript>
+<!--
+function click(){
+if(event.button==2){
+alert('Ratero');
+}
+}
+document.onmousedown=click
+//-->
+</SCRIPT>
+
 </body>
 </html>
