--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 .md-link {
   margin-right: 8px;
 }    
- .btn-md{background-color:#eef8fc!important;border:none;color:#141d26;padding:10px 24px;border-radius:12px;text-align:center;text-decoration:none;display:inline-block;font-size:16px;margin:4px 2px;cursor:pointer}    
+ .btn-md{background-color:#eef8fc!important;border:none;color:#141d26;padding:8px 15px;border-radius:6px;text-align:center;text-decoration:none;display:inline-block;font-size:11px;margin:4px 2px;cursor:pointer}    
 .clean-gray{border:solid 1px #dedede;background:#efefef;color:#222;padding:4px;text-align:center}
 .my-0{margin-top:0!important;margin-bottom:0!important}
 .mr-md-auto{margin-right:auto!important}
@@ -1084,7 +1084,7 @@ body {
     margin: 0;
     padding: 0;
     transition: all .4s;
-    background: #0d141e;
+    background: #8a0202;
     color: #fff;
 }
 
@@ -1546,7 +1546,7 @@ div#st-1 {margin-top:10px}
             justify-content: center;
             align-items: center;
             border: 2px solid;
-            background-color: rgba(21, 160, 224, 0.342);
+            background-color: rgb(0, 0, 0);
             text-decoration: none;
             font-size: 10px;
             height: 30px;
@@ -1554,7 +1554,7 @@ div#st-1 {margin-top:10px}
             margin: 5px 5px;
             padding: 0px 4px;
             border-radius: 5px;
-            border-color: rgba(21, 160, 224, 0.568);
+            border-color: rgba(247, 242, 241, 0.568);
 
         }
 </style>
@@ -1562,7 +1562,11 @@ div#st-1 {margin-top:10px}
 
 <body>
     
-
+<div id="player-wrapper">
+        <div id="poster-overlay" onclick="playVideo()"></div>
+        <div id="player"></div>
+    </div>
+    <div class="unauthorized-message" id="unauthorized-message" style="display:none;">Acceso no autorizado.</div>
 
 
 
@@ -1625,7 +1629,7 @@ div#st-1 {margin-top:10px}
 
 
 <center>
-<i style="color: #eb9316; font-size: 22px;">Bolivar vs Independiente Petrolero</i>
+<i style="color: #eb9316; font-size: 22px;">Bolívar vs Nacional Potosí</i>
 </center>
 
 
@@ -1649,16 +1653,16 @@ div#st-1 {margin-top:10px}
 
 
 
+
 <iframe class="shadow-lg rounded" width="100%" style="aspect-ratio:16/9;margin-bottom:20px" name="iframe" id="iframe" title="Live Video" frameborder="0" allow="autoplay; encrypted-media" 
-  allowfullscreen src="https://voodc.com/embed/85818b92a5899e8a847a8597a08d988d87.html" scrolling="no"></iframe>
+  allowfullscreen src="https://deportesonplus.github.io/doplus-3/" scrolling="no"></iframe>
 <p>
 
 
-
-
 <strong>Opciones:</strong></p>
-<a class="btn btn-md" target="iframe" href="#2" onclick="document.getElementById('iframe').src='https://voodc.com/embed/1/85818b92a5899e8a847a8597a08d988d87.html'; return false;">FUTBOL CANAL HD </a>
+<a class="btn btn-md" target="iframe" href="#2" onclick="document.getElementById('iframe').src='https://deportesonplus.github.io/doplus-3/'; return false;">FUTBOL CANAL HD 1</a>
 
+<a class="btn btn-md" target="iframe" href="#2" onclick="document.getElementById('iframe').src='https://voodc.com/embed/1/85818b939d8e9d84847a8597a18b988d88.html'; return false;">FUTBOL CANAL HD 2 </a>
 
 
 
@@ -1693,6 +1697,5 @@ alert('Ratero');
 document.onmousedown=click
 //-->
 </SCRIPT>
-
 </body>
 </html>
