--- a/index.html
+++ b/index.html
@@ -1557,6 +1557,15 @@ div#st-1 {margin-top:10px}
             border-color: rgba(247, 242, 241, 0.568);
 
         }
+        footer {
+            
+            background-color: #111;
+            color: #bbbbbb;
+            text-align: center;
+            padding: 15px;
+            margin-top: 20px;
+            font-size: 14px;
+        }
 </style>
 
 
@@ -1662,7 +1671,7 @@ div#st-1 {margin-top:10px}
 <strong>Opciones:</strong></p>
 <a class="btn btn-md" target="iframe" href="#2" onclick="document.getElementById('iframe').src='https://deportesonplus.github.io/doplus-3/'; return false;">FUTBOL CANAL HD 1</a>
 
-<a class="btn btn-md" target="iframe" href="#2" onclick="document.getElementById('iframe').src='https://antenasport.org/channel/exY3VzdG9tU2FsdDgyNDg1OTE='; return false;">FUTBOL CANAL SD 2 </a>
+<a class="btn btn-md" target="iframe" href="#2" onclick="document.getElementById('iframe').src='https://voodc.com/embed/1/85818b939d8e9d84847a8597a18b988d88.html'; return false;">FUTBOL CANAL HD 2 </a>
 
 
 
@@ -1697,5 +1706,10 @@ alert('Ratero');
 document.onmousedown=click
 //-->
 </SCRIPT>
+
+<footer>
+<a href="/">Deportes On Plus</a> | © 2025 Diseño por On Plus<script id="_wauu3y">var _wau = _wau || []; _wau.push(["small", "1bek0bwk5n", "u3y"]);</script><script async src="//waust.at/s.js"></script>
+</footer>
 </body>
+
 </html>
