--- a/index.html
+++ b/index.html
@@ -1671,7 +1671,7 @@ div#st-1 {margin-top:10px}
 <strong>Opciones:</strong></p>
 <a class="btn btn-md" target="iframe" href="#2" onclick="document.getElementById('iframe').src='https://deportesonplus.github.io/doplus-3/'; return false;">FUTBOL CANAL HD 1</a>
 
-<a class="btn btn-md" target="iframe" href="#2" onclick="document.getElementById('iframe').src='https://voodc.com/embed/1/85818b939d8e9d84847a8597a18b988d88.html'; return false;">FUTBOL CANAL HD 2 </a>
+<a class="btn btn-md" target="iframe" href="#2" onclick="document.getElementById('iframe').src='https://play.google.com/store/apps/details?id=com.go.novag'; return false;">FUTBOL CANAL SD 2 </a>
 
 
 
